Fix product page price overlap issue and adjust checkout styles

--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -57,8 +57,11 @@
   top: 17px
   z-index: 1
 
-.has-announcement-message .product-form
+.has-header-message .product-form
   margin-top: -72px
+
+  @media screen and (max-width: $break-medium)
+    margin-top: 0
 
 .product-form
   margin-left: auto
